--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <ul class="navbar__menu">
           <li class="navbar__menu__item active" data-link="#home">Home</li>
           <li class="navbar__menu__item" data-link="#about">About</li>
-          <li class="navbar__menu__item" data-link="#skills">Principle</li>
+          <!-- <li class="navbar__menu__item" data-link="#skills">Principle</li>
           <li class="navbar__menu__item" data-link="#work">Reference</li>
-          <!-- <li class="navbar__menu__item" data-link="#testimonials">Manual</li> -->
+          <li class="navbar__menu__item" data-link="#testimonials">Manual</li> -->
           <li class="navbar__menu__item" data-link="#contact">Contact</li>
         </ul>
       </div>
@@ -101,7 +101,7 @@
       </div>
     </section>
 
-    <!-- Skills -->
+    <!-- Skills
     <section id="skills" class="section">
       <div class="section__container">
       <h1>Skills</h1>
@@ -185,7 +185,7 @@
     </div>
     </section>
 
-    <!-- Work -->
+    <!-- Work 
     <section id="work" class="section">
       <div class="section__container">
         <h1>My works</h1>
@@ -264,7 +264,7 @@
         </a>
       </div>
       </div>
-    </section>
+    </section> !-->
 
     <!-- Testmonials
     <section id="testimonials" class="section">
