--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
           <li class="navbar__menu__item active" data-link="#home">Home</li>
           <li class="navbar__menu__item" data-link="#about">About</li>
           <!-- <li class="navbar__menu__item" data-link="#skills">Principle</li>
-          <li class="navbar__menu__item" data-link="#work">Reference</li>
-          <li class="navbar__menu__item" data-link="#testimonials">Manual</li> -->
+          <li class="navbar__menu__item" data-link="#work">Reference</li>-->
+          <li class="navbar__menu__item" data-link="#testimonials">Start</li>
           <li class="navbar__menu__item" data-link="#contact">Contact</li>
         </ul>
       </div>
@@ -55,7 +55,7 @@
       <h2 class="home__description">
         수리학과 유체역학에 근거하여, 관수 설계에 보다 과학적으로 접근할 수 있습니다.
       </h2>
-      <button class="home__contactme">Contact Me</button>
+      <button class="home__contactme">시작하기</button>
     </section>
 
     <!-- About -->
@@ -266,19 +266,44 @@
       </div>
     </section> !-->
 
-    <!-- Testmonials
+    <!-- Testmonials -->
     <section id="testimonials" class="section">
       <div class="section__container">
-        <h1>Testmonials</h1>
-        <h3>See what they say about me</h3>
+        <h1>시작하기</h1>
+        <h3>우선, 말단 관경을 산정하겠습니다. 말단 지관의 노즐 당 물량을 입력해주세요. (단위: liter per second) </h3>
       <div class="testimonials">
         <div class="testimonial">
-          <img
-            src="img/teestimonial/peterson.png"
-            alt="peterson"
-            class="testmonial_avartar"
-            style="margin-left:0px;"
-          />
+          <div class="testimonial__speech-bubble">
+            <p>
+              <input type="button" value="말단 관경 산정 시작" onClick="terminalPipeDiameter()" />
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <h3> 그 다음은 분기 관경을 산정하겠습니다. </h3>
+      <div class="testimonials">
+        <div class="testimonial">
+          <div class="testimonial__speech-bubble">
+            <p>
+              <input type="button" value="분기 관경 산정 시작" onClick="dividePipeDiameter()" />
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <h3> 마지막으로 마찰손실 수두를 산정하겠습니다. </h3>
+      <div class="testimonials">
+        <div class="testimonial">
+          <div class="testimonial__speech-bubble">
+            <p>
+              <input type="button" value="마찰 손실 수두 산정하기" onClick="Friction()" />
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="testimonials">
+        <div class="testimonial">
           <div class="testimonial__speech-bubble">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos
@@ -289,28 +314,9 @@
             <p class="name"><a href="">Perterson</a>/Samsung</p>
           </div>
         </div>
+      </div> -->
       </div>
-      <div class="testimonials">
-        <div class="testimonial">
-          <div class="testimonial__speech-bubble">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos
-              molestiae, optio ipsa pariatur obcaecati enim eum nemo quisquam
-              quas fuga quam aliquid? Natus iure unde tempora quisquam enim
-              perspiciatis repellat.
-            </p>
-            <p class="name"><a href="">Perterson</a>/Samsung</p>
-          </div>
-          <img
-            src="img/teestimonial/peterson.png"
-            alt="peterson"
-            class="testmonial_avartar"
-            style="margin-right:0px;"
-          />
-        </div>
-      </div>
-      </div>
-    </section> -->
+    </section> 
 
     <!-- Contact -->
     <section id="contact" class="section">
