--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <img src="img/kanamycine sameul_choi.png" alt="kanamycineStudio" class="avatar" />
       <h1 class="home__title">
          MDPC <br />
-         관수 파이프 관경 및 모터 용량 산정 프로그램 🙄
+         관수 파이프 관경 및 모터 용량 산정 프로그램 
       </h1>
       <h2 class="home__description">
         수리학과 유체역학에 근거하여, 관수 설계에 보다 과학적으로 접근할 수 있습니다.
